feat: Add product and category management features
- Created ProductVariantRequest and UpdateProductRequest DTOs for product variant and update requests.
- Implemented SessionResponse and CategoryResponse DTOs for session and category responses.
- Added ImageResponse, ProductResponse, and VariantResponse DTOs for product-related responses.
- Established repositories for audit logs, permissions, roles, users, categories, products, and orders.
- Developed CategoryService for category retrieval and mapping.
- Implemented ProductService for product retrieval, filtering, and mapping.
- Created AdminProductsService for admin-level product management, including CRUD operations and variant/image management.
- Introduced RoleCacheService for caching roles and permissions in Redis.
- Added FileStorageService for handling file uploads.
- Implemented SlugUtils for generating slugs from strings.
- Seeded initial roles and permissions into the database.